Mobile overflowed view fixed

--- a/src/page-component/component/commit/style.css
+++ b/src/page-component/component/commit/style.css
@@ -89,7 +89,7 @@ li {
 
 
 input[type= 'text'] {
-  width: 100%;
+  width: calc(100% - 25px);
   height: 40px;
   max-width: 400px;
 
@@ -110,7 +110,7 @@ input[type= 'text'] {
   outline: none;
 }
 textarea {
-  width: 100%;
+  width: calc(100% - 25px);
   height: 150px;
   max-width: 400px;
 
